# laptime_simulator

./: .gitignore  CMakeLists.txt  Makefile  Parameters.txt  README.md  config.csv  config_pacejka_v1.1.csv  config_pacejka_v1.2.csv  config_pacejka_v1.csv  config_pacejka_v2.2.csv  config_pacejka_v2.csv  config_pacejka_v2_ackermann.csv  config_pacejka_v2_steering.csv  config_simple.csv
src/: coordTypes.h  main.cpp  types.h
src/config/: config.h  configHelper.cpp
src/simulation/: acceleration.cpp  acceleration.h  simulation.cpp  simulation.h  skidpad.cpp  skidpad.h
src/vehicle/: aeroElement.h  body.h  coordTypes.h  tireAdapter.h  tireBridge.h  vehicle.cpp  vehicle.h  vehicle.inl  vehicleHelper.h
src/vehicle/aero/: aero.cpp  aero.h  aero.inl  aeroSimple.h  aeroSimple.inl
src/vehicle/steering/: ackermannTable.h  ackermannTable.inl  steeringTable.h  steeringTable.inl
src/vehicle/tire/: tire.cpp  tire.h  tireBridge.h  tirePacejka.cpp  tirePacejka.h  tirePacejka.inl  tirePacejkaV1.h  tirePacejkaV1.inl  tirePacejkaV2.h  tirePacejkaV2.inl  tireSimple.cpp  tireSimple.h  tireSimple.inl  tireV2.cpp  tireV2.h
tools/: plot_yaw_diagram.py
